feat: integrate GST registration and backend updates, fix mobile applicationStore drafts and compilation